--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@ cache
 *.xlsx
 *.rda
 *.sas
-*.txt
 *.sav
+raw_data/06999-0001-Data.txt
+raw_data/03151-0001-Data.txt
+raw_data/04273-0001-Data.txt
